tests-integration/tests/roundtrip/invalid/syntax/missing_token/03/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/missing_token/03/input.essence:1:5:
  |
1 | find: bool
  |     ^
Missing <identifier>

